Fixed footer overlap by adding bottom margin to #wrapper. Added group route/view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ body {
   padding: 10px;
 }
 
-#content-area{
+#wrapper{
   margin-bottom: 50px;
 }
 
